# aula20_bootcamp_python

./: .gitignore  README.md  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schemas.py
