[tool.poetry]
name = "aula20-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Gustavo Botelho Vieira <gu-botelho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
schemas = "^0.7.1"
pydantic = "^2.8.2"
fastapi = "^0.112.2"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
